admin priviliges over class and child routes plus updating swagger documentation
